--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Museum Tickets</string>
+    <string name="top_nyc_museums_to_visit">Top NYC Museums to visit</string>
 </resources>
