--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,16 @@
     <string name="top_nyc_museums_to_visit">Top NYC Museums to visit</string>
     <string name="string_my_activity_label">string/my_activity_label</string>
     <string name="museum_selected_is">Museum selected is</string>
+
+    <string name="adultPrice">adult $</string>
+    <string name="seniorPrice">senior $</string>
+    <string name="studentPrice">student $</string>
+
+    <string name="museum1">The Metropolitan Museum of Art</string>
+    <string name="museum2">The Museum of Modern Art</string>
+    <string name="museum3">American Museum of Natural History</string>
+    <string name="museum4">Solomon R. Guggenheim Museum</string>
+
     <string name="todo">TODO</string>
     <string name="button">Calculate Ticket Price</string>
     <string name="set_price" />
